logs/train_gan_live.log
nohup: ignoring input
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/root/pidi/ml/train.py", line 31, in <module>
    from ml.models import (
  File "/root/pidi/ml/models/user_behavior.py", line 191
    n_jobs=-1,
    ^^^^^^^^^
SyntaxError: keyword argument repeated: n_jobs
